# the-absolute-reference

./: .gitignore  CMakeLists.txt  License.txt  Notes.txt  Readme.txt  Todo.txt  meson.build  taref.ini
Game/: Bg.c  Bg.h  BgMap.c  BgMap.h  Block.h  BuildData.c  BuildData.h  Button.c  Button.h  Checksum.c  Checksum.h  Coin.c  Coin.h  Credit.c  Credit.h  Debug.c  Debug.h  DelayTable.c  DemoLoop.c  DemoLoop.h  DisplayObject.c  DisplayObject.h  Eeprom.c  Eeprom.h  Effect.c  Entity.c  Entity.h  Field.h  Fixed.h  Frame.c  Frame.h  GameBg.c  GameBg.h  GameLoop.c  GameLoop.h  GamePalNum.h  Grade.c  Grade.h  Graphics.c  Graphics.h  (+156 more)
Platform/: PlatformReadme.txt
Platform/PsikyoSH/: Main.c  Start.c  Start.h
Platform/PsikyoSH/PlatformSupport/: PlatformTypes.h  PlatformUpdate.h  Vblank.h
Platform/SDL2/: CMakeLists.txt  PlatformUpdate.c
Platform/SDL2/PlatformSupport/: HwData.c  PlatformTypes.h  PlatformUpdate.h  RomData.c  Vblank.h
Platform/Util/: HwData.c  Macros.h  RomData.c
Source/BuildData/: BuildData.c  BuildData.h  Checksum.c  Checksum.h
Source/Eeprom/: Eeprom.c  Eeprom.h  Setting.c  Setting.h
Source/Game/: PalNum.h  RegionWarning.c  Save.c  Save.h  Screen.c  Screen.h  Sequence.c  Sequence.h  Temp.c  Temp.h
Source/Game/Graphics/: DisplayObject.c  DisplayObject.h  Entity.c  Entity.h  Layer.h  ShowBlockField.c  ShowBlockField.h  ShowClearTime.c  ShowColumnMarker.c  ShowColumnMarker.h  ShowEffect.c  ShowEffect.h  ShowGameOverFade.c  ShowGameOverFade.h  ShowGameStatus.c  ShowGameStatus.h  ShowNewChallenger.c  ShowNewChallenger.h  ShowObject.c  ShowObject.h  ShowRowDel.c  ShowRowDel.h  ShowStaff.c  ShowStaff.h  ShowText.c  ShowText.h  ShowVersusReadyGo.c  ShowVersusReadyGo.h
Source/Game/Play/: Block.h  Debug.c  DelayTable.c  DelayTable.h  Grade.c  Grade.h  GravityTable.c  GravityTable.h  Matrix.h  Medal.c  Medal.h  Player.c  Player.h  Ranking.c  Ranking.h  RankingCode.c  RankingCode.h  Versus.c  Versus.h
Source/Game/Play/Item/: Item.c  Item.h  ShowItemEffect.c  ShowItemEffect.h  ShowItemWarningColorBlock.c  ShowItemWarningColorBlock.h  ShowItemWarningDarkBlock.c  ShowItemWarningDarkBlock.h  ShowItemWarningDeathBlock.c  ShowItemWarningDeathBlock.h  ShowItemWarningExchgField.c  ShowItemWarningExchgField.h  ShowItemWarningHardBlock.c  ShowItemWarningHardBlock.h  ShowItemWarningMirrorBlock.c  ShowItemWarningMirrorBlock.h  ShowItemWarningNegaField.c  ShowItemWarningNegaField.h  ShowItemWarningRollRoll.c  ShowItemWarningRollRoll.h  ShowItemWarningShotgun.c  ShowItemWarningShotgun.h  ShowItemWarningTransform.c  ShowItemWarningTransform.h  ShowItemWarningXRay.c  ShowItemWarningXRay.h  ShowLaser.c  ShowLaser.h  UpdateItemBottomDelField.c  UpdateItemBottomDelField.h  UpdateItemColorBlock.c  UpdateItemColorBlock.h  UpdateItemDarkBlock.c  UpdateItemDarkBlock.h  UpdateItemDeathBlock.c  UpdateItemDeathBlock.h  UpdateItemDelEven.c  UpdateItemDelEven.h  UpdateItemExchgField.c  UpdateItemExchgField.h  (+25 more)
Source/Input/: Button.c  Button.h  Coin.c  Coin.h  Credit.c  Credit.h  Input.c  Input.h  InputTypes.h
Source/Lib/: Fixed.h  LibC.c  LibC.h  Macros.h  Math.c  Math.h
Source/Main/: AttractLoop.c  AttractLoop.h  DemoLoop.c  DemoLoop.h  DemoReplayInput.h  Frame.c  Frame.h  GameLoop.c  GameLoop.h  InitVideo.c  InitVideo.h  Main.c  Main.h  MainLoop.c  MainLoop.h  TestLoop.c  TestLoop.h
Source/Platform/: PlatformReadme.txt
Source/Platform/PsikyoSH/: Eeprom.c  EepromAccess.c  HwData.c  MemCheck.c  PlatformUpdate.c  Todo.txt
Source/Platform/PsikyoSH/PlatformSupport/: Config.h  EepromAccess.h  HwData.h  HwSound.h  PlatformTypes.h  PlatformUpdate.h  SoundControl.h
Source/Platform/SDL2/: AccessAudio.c  AccessAudio.h  AccessDisplay.c  AccessDisplay.h  AccessSound.c  AccessSound.h  AddBinarySDL2.cmake  AddExecutable.cmake  AddLibrary.cmake  CMakeLists.txt  Display.c  Display.h  HwSound.c  Main.c  PlatformUpdate.c  SoundControl.c
Source/Platform/SDL2/PlatformSupport/: Config.h  EepromAccess.h  HwData.h  HwSound.h  PlatformTypes.h  PlatformUpdate.h  SoundControl.h
Source/Platform/SDL2/Tool/: CMakeLists.txt
Source/Platform/SDL2/Tool/SoundPlayer/: CMakeLists.txt  Main.c
Source/Platform/Util/: AccessConfig.c  AccessConfig.h  AccessData.c  AccessData.h  AccessEeprom.c  AccessEeprom.h  AccessPaths.c  AccessPaths.h  AddBinary.cmake  Color.h  Config.c  Config.h  Data.c  Data.h  DemoReplayInput.c  Eeprom.c  EepromData.c  EepromData.h  HwData.c  HwData.h  HwSound.h  Render.c  RomData.c  ini.c  ini.h
Source/Platform/Util/Render/: Render.c  Render.h
Source/Sound/: Music.c  Music.h  Sound.c  Sound.h  SoundDefs.h  SoundEffect.h
Source/Video/: BgMap.c  BgMap.h  GameBg.c  GameBg.h  HwSprite.h  InitScaleRam.c  InitScaleRam.h  Object.h  Pal.c  Pal.h  PalNum.h  SpriteInit.c  SpriteInit.h  UNK_600F1A8.c  UNK_600F1A8.h  UnknownSprite.c  UnknownSprite.h  Video.c  Video.h  VideoDefs.h
