cmake_minimum_required(VERSION 3.10)

set(CMAKE_VERBOSE_MAKEFILE on)

# TODO: Add a CMake option for specifying the platform, choosing a sane default
# based on the platform CMake was run on if the option wasn't specified.
set(PLATFORM_NAME "SDL2")

set(EXECUTABLE_SOURCES
	"../../BuildData/BuildData.c"
	"../../BuildData/Checksum.c"

	"../../Eeprom/Setting.c"

	"../../Game/RegionWarning.c"
	"../../Game/Save.c"
	"../../Game/Screen.c"
	"../../Game/Sequence.c"
	"../../Game/Temp.c"

	"../../Game/Graphics/DisplayObject.c"
	"../../Game/Graphics/Entity.c"
	"../../Game/Graphics/ShowBlockField.c"
	"../../Game/Graphics/ShowClearTime.c"
	"../../Game/Graphics/ShowColumnMarker.c"
	"../../Game/Graphics/ShowEffect.c"
	"../../Game/Graphics/ShowGameOverFade.c"
	"../../Game/Graphics/ShowGameStatus.c"
	"../../Game/Graphics/ShowNewChallenger.c"
	"../../Game/Graphics/ShowObject.c"
	"../../Game/Graphics/ShowRowDel.c"
	"../../Game/Graphics/ShowStaff.c"
	"../../Game/Graphics/ShowText.c"
	"../../Game/Graphics/ShowVersusReadyGo.c"

	"../../Game/Play/Debug.c"
	"../../Game/Play/DelayTable.c"
	"../../Game/Play/Grade.c"
	"../../Game/Play/GravityTable.c"
	"../../Game/Play/Medal.c"
	"../../Game/Play/Player.c"
	"../../Game/Play/Ranking.c"
	"../../Game/Play/RankingCode.c"

	"../../Game/Play/Item/Item.c"
	"../../Game/Play/Item/ShowItemEffect.c"
	"../../Game/Play/Item/ShowItemWarningColorBlock.c"
	"../../Game/Play/Item/ShowItemWarningDarkBlock.c"
	"../../Game/Play/Item/ShowItemWarningDeathBlock.c"
	"../../Game/Play/Item/ShowItemWarningExchgField.c"
	"../../Game/Play/Item/ShowItemWarningHardBlock.c"
	"../../Game/Play/Item/ShowItemWarningMirrorBlock.c"
	"../../Game/Play/Item/ShowItemWarningNegaField.c"
	"../../Game/Play/Item/ShowItemWarningRollRoll.c"
	"../../Game/Play/Item/ShowItemWarningShotgun.c"
	"../../Game/Play/Item/ShowItemWarningTransform.c"
	"../../Game/Play/Item/ShowItemWarningXRay.c"
	"../../Game/Play/Item/ShowLaser.c"
	"../../Game/Play/Item/UpdateItemBottomDelField.c"
	"../../Game/Play/Item/UpdateItemColorBlock.c"
	"../../Game/Play/Item/UpdateItemDarkBlock.c"
	"../../Game/Play/Item/UpdateItemDeathBlock.c"
	"../../Game/Play/Item/UpdateItemDelEven.c"
	"../../Game/Play/Item/UpdateItemExchgField.c"
	"../../Game/Play/Item/UpdateItemFlipField.c"
	"../../Game/Play/Item/UpdateItemFreeFall.c"
	"../../Game/Play/Item/UpdateItemHardBlock.c"
	"../../Game/Play/Item/UpdateItemLaser.c"
	"../../Game/Play/Item/UpdateItemLeftMovField.c"
	"../../Game/Play/Item/UpdateItemMirrorBlock.c"
	"../../Game/Play/Item/UpdateItemNegaField.c"
	"../../Game/Play/Item/UpdateItemRightMovField.c"
	"../../Game/Play/Item/UpdateItemRollRoll.c"
	"../../Game/Play/Item/UpdateItemShotgun.c"
	"../../Game/Play/Item/UpdateItemTopDelField.c"
	"../../Game/Play/Item/UpdateItemTransform.c"
	"../../Game/Play/Item/UpdateItemXRay.c"

	"../../Input/Button.c"
	"../../Input/Coin.c"
	"../../Input/Credit.c"
	"../../Input/Input.c"

	"../../Lib/LibC.c"
	"../../Lib/Math.c"

	"../../Main/AttractLoop.c"
	"../../Main/Frame.c"
	"../../Main/GameLoop.c"
	"../../Main/Main.c"
	"../../Main/MainLoop.c"
	"../../Main/TestLoop.c"

	"../../Sound/Sound.c"

	"../../Video/BgMap.c"
	"../../Video/GameBg.c"
	"../../Video/InitScaleRam.c"
	"../../Video/Pal.c"
	"../../Video/SpriteInit.c"
	"../../Video/UnknownSprite.c"
	"../../Video/Video.c"
)
set(EXECUTABLE_HEADERS
	"../../BuildData/BuildData.h"
	"../../BuildData/Checksum.h"

	"../../Eeprom/Eeprom.h"
	"../../Eeprom/Setting.h"

	"../../Game/PalNum.h"
	"../../Game/RegionWarning.h"
	"../../Game/Save.h"
	"../../Game/Screen.h"
	"../../Game/Sequence.h"
	"../../Game/Temp.h"

	"../../Game/Graphics/DisplayObject.h"
	"../../Game/Graphics/Entity.h"
	"../../Game/Graphics/Layer.h"
	"../../Game/Graphics/ShowBlockField.h"
	"../../Game/Graphics/ShowClearTime.h"
	"../../Game/Graphics/ShowColumnMarker.h"
	"../../Game/Graphics/ShowEffect.h"
	"../../Game/Graphics/ShowGameOverFade.h"
	"../../Game/Graphics/ShowGameStatus.h"
	"../../Game/Graphics/ShowNewChallenger.h"
	"../../Game/Graphics/ShowObject.h"
	"../../Game/Graphics/ShowRowDel.h"
	"../../Game/Graphics/ShowStaff.h"
	"../../Game/Graphics/ShowText.h"
	"../../Game/Graphics/ShowVersusReadyGo.h"

	"../../Game/Play/Block.h"
	"../../Game/Play/Debug.h"
	"../../Game/Play/DelayTable.h"
	"../../Game/Play/Grade.h"
	"../../Game/Play/GravityTable.h"
	"../../Game/Play/Matrix.h"
	"../../Game/Play/Medal.h"
	"../../Game/Play/Player.h"
	"../../Game/Play/Ranking.h"
	"../../Game/Play/RankingCode.h"

	"../../Game/Play/Item/Item.h"
	"../../Game/Play/Item/ShowItemEffect.h"
	"../../Game/Play/Item/ShowItemWarningColorBlock.h"
	"../../Game/Play/Item/ShowItemWarningDarkBlock.h"
	"../../Game/Play/Item/ShowItemWarningDeathBlock.h"
	"../../Game/Play/Item/ShowItemWarningExchgField.h"
	"../../Game/Play/Item/ShowItemWarningHardBlock.h"
	"../../Game/Play/Item/ShowItemWarningMirrorBlock.h"
	"../../Game/Play/Item/ShowItemWarningNegaField.h"
	"../../Game/Play/Item/ShowItemWarningRollRoll.h"
	"../../Game/Play/Item/ShowItemWarningShotgun.h"
	"../../Game/Play/Item/ShowItemWarningTransform.h"
	"../../Game/Play/Item/ShowItemWarningXRay.h"
	"../../Game/Play/Item/ShowLaser.h"
	"../../Game/Play/Item/UpdateItemBottomDelField.h"
	"../../Game/Play/Item/UpdateItemColorBlock.h"
	"../../Game/Play/Item/UpdateItemDarkBlock.h"
	"../../Game/Play/Item/UpdateItemDeathBlock.h"
	"../../Game/Play/Item/UpdateItemDelEven.h"
	"../../Game/Play/Item/UpdateItemExchgField.h"
	"../../Game/Play/Item/UpdateItemFlipField.h"
	"../../Game/Play/Item/UpdateItemFreeFall.h"
	"../../Game/Play/Item/UpdateItemHardBlock.h"
	"../../Game/Play/Item/UpdateItemLaser.h"
	"../../Game/Play/Item/UpdateItemLeftMovField.h"
	"../../Game/Play/Item/UpdateItemMirrorBlock.h"
	"../../Game/Play/Item/UpdateItemNegaField.h"
	"../../Game/Play/Item/UpdateItemRightMovField.h"
	"../../Game/Play/Item/UpdateItemRollRoll.h"
	"../../Game/Play/Item/UpdateItemShotgun.h"
	"../../Game/Play/Item/UpdateItemTopDelField.h"
	"../../Game/Play/Item/UpdateItemTransform.h"
	"../../Game/Play/Item/UpdateItemXRay.h"

	"../../Input/Button.h"
	"../../Input/Coin.h"
	"../../Input/Credit.h"
	"../../Input/Input.h"
	"../../Input/InputTypes.h"

	"../../Lib/Fixed.h"
	"../../Lib/LibC.h"
	"../../Lib/Macros.h"
	"../../Lib/Math.h"

	"../../Main/AttractLoop.h"
	"../../Main/DemoReplayInput.h"
	"../../Main/Frame.h"
	"../../Main/GameLoop.h"
	"../../Main/MainLoop.h"
	"../../Main/TestLoop.h"

	"../../Sound/Music.h"
	"../../Sound/Sound.h"
	"../../Sound/SoundEffect.h"

	"../../Video/BgMap.h"
	"../../Video/InitScaleRam.h"
	"../../Video/GameBg.h"
	"../../Video/HwSprite.h"
	"../../Video/Object.h"
	"../../Video/Pal.h"
	"../../Video/PalNum.h"
	"../../Video/SpriteInit.h"
	"../../Video/UnknownSprite.h"
	"../../Video/Video.h"
	"../../Video/VideoDefs.h"
)
set(EXECUTABLE_NAME "taref")
project("TheAbsoluteReference" VERSION 0.1.4 LANGUAGES C)
add_subdirectory("Source/Platform/${PLATFORM_NAME}")
