cmake_minimum_required(VERSION 3.10)

set(CMAKE_VERBOSE_MAKEFILE on)

project("TheAbsoluteReference" VERSION 0.4.2 LANGUAGES C)

if(NOT PLATFORM_NAME)
	set(PLATFORM_NAME "SDL2")
endif()

set(SRC "${CMAKE_SOURCE_DIR}/Source")

set(GAME_SOURCES
	"${SRC}/BuildData/BuildData.c"
	"${SRC}/BuildData/Checksum.c"

	"${SRC}/Eeprom/Setting.c"

	"${SRC}/Game/RegionWarning.c"
	"${SRC}/Game/Save.c"
	"${SRC}/Game/Screen.c"
	"${SRC}/Game/Sequence.c"
	"${SRC}/Game/Temp.c"

	"${SRC}/Game/Graphics/DisplayObject.c"
	"${SRC}/Game/Graphics/Entity.c"
	"${SRC}/Game/Graphics/ShowBlockField.c"
	"${SRC}/Game/Graphics/ShowClearTime.c"
	"${SRC}/Game/Graphics/ShowColumnMarker.c"
	"${SRC}/Game/Graphics/ShowEffect.c"
	"${SRC}/Game/Graphics/ShowGameOverFade.c"
	"${SRC}/Game/Graphics/ShowGameStatus.c"
	"${SRC}/Game/Graphics/ShowNewChallenger.c"
	"${SRC}/Game/Graphics/ShowObject.c"
	"${SRC}/Game/Graphics/ShowRowDel.c"
	"${SRC}/Game/Graphics/ShowStaff.c"
	"${SRC}/Game/Graphics/ShowText.c"
	"${SRC}/Game/Graphics/ShowVersusReadyGo.c"

	"${SRC}/Game/Play/Debug.c"
	"${SRC}/Game/Play/DelayTable.c"
	"${SRC}/Game/Play/Grade.c"
	"${SRC}/Game/Play/GravityTable.c"
	"${SRC}/Game/Play/Medal.c"
	"${SRC}/Game/Play/Player.c"
	"${SRC}/Game/Play/Ranking.c"
	"${SRC}/Game/Play/RankingCode.c"

	"${SRC}/Game/Play/Item/Item.c"
	"${SRC}/Game/Play/Item/ShowItemEffect.c"
	"${SRC}/Game/Play/Item/ShowItemWarningColorBlock.c"
	"${SRC}/Game/Play/Item/ShowItemWarningDarkBlock.c"
	"${SRC}/Game/Play/Item/ShowItemWarningDeathBlock.c"
	"${SRC}/Game/Play/Item/ShowItemWarningExchgField.c"
	"${SRC}/Game/Play/Item/ShowItemWarningHardBlock.c"
	"${SRC}/Game/Play/Item/ShowItemWarningMirrorBlock.c"
	"${SRC}/Game/Play/Item/ShowItemWarningNegaField.c"
	"${SRC}/Game/Play/Item/ShowItemWarningRollRoll.c"
	"${SRC}/Game/Play/Item/ShowItemWarningShotgun.c"
	"${SRC}/Game/Play/Item/ShowItemWarningTransform.c"
	"${SRC}/Game/Play/Item/ShowItemWarningXRay.c"
	"${SRC}/Game/Play/Item/ShowLaser.c"
	"${SRC}/Game/Play/Item/UpdateItemBottomDelField.c"
	"${SRC}/Game/Play/Item/UpdateItemColorBlock.c"
	"${SRC}/Game/Play/Item/UpdateItemDarkBlock.c"
	"${SRC}/Game/Play/Item/UpdateItemDeathBlock.c"
	"${SRC}/Game/Play/Item/UpdateItemDelEven.c"
	"${SRC}/Game/Play/Item/UpdateItemExchgField.c"
	"${SRC}/Game/Play/Item/UpdateItemFlipField.c"
	"${SRC}/Game/Play/Item/UpdateItemFreeFall.c"
	"${SRC}/Game/Play/Item/UpdateItemHardBlock.c"
	"${SRC}/Game/Play/Item/UpdateItemLaser.c"
	"${SRC}/Game/Play/Item/UpdateItemLeftMovField.c"
	"${SRC}/Game/Play/Item/UpdateItemMirrorBlock.c"
	"${SRC}/Game/Play/Item/UpdateItemNegaField.c"
	"${SRC}/Game/Play/Item/UpdateItemRightMovField.c"
	"${SRC}/Game/Play/Item/UpdateItemRollRoll.c"
	"${SRC}/Game/Play/Item/UpdateItemShotgun.c"
	"${SRC}/Game/Play/Item/UpdateItemTopDelField.c"
	"${SRC}/Game/Play/Item/UpdateItemTransform.c"
	"${SRC}/Game/Play/Item/UpdateItemXRay.c"

	"${SRC}/Input/Button.c"
	"${SRC}/Input/Coin.c"
	"${SRC}/Input/Credit.c"
	"${SRC}/Input/Input.c"

	"${SRC}/Lib/LibC.c"
	"${SRC}/Lib/Math.c"

	"${SRC}/Main/AttractLoop.c"
	"${SRC}/Main/Frame.c"
	"${SRC}/Main/GameLoop.c"
	"${SRC}/Main/InitVideo.c"
	"${SRC}/Main/MainLoop.c"
	"${SRC}/Main/TestLoop.c"

	"${SRC}/Sound/Music.c"
	"${SRC}/Sound/Sound.c"

	"${SRC}/Video/BgMap.c"
	"${SRC}/Video/GameBg.c"
	"${SRC}/Video/InitScaleRam.c"
	"${SRC}/Video/Pal.c"
	"${SRC}/Video/SpriteInit.c"
	"${SRC}/Video/UnknownSprite.c"
	"${SRC}/Video/UNK_600F1A8.c"
	"${SRC}/Video/Video.c"
)
set(GAME_HEADERS
	"${SRC}/BuildData/BuildData.h"
	"${SRC}/BuildData/Checksum.h"

	"${SRC}/Eeprom/Eeprom.h"
	"${SRC}/Eeprom/Setting.h"

	"${SRC}/Game/PalNum.h"
	"${SRC}/Game/RegionWarning.h"
	"${SRC}/Game/Save.h"
	"${SRC}/Game/Screen.h"
	"${SRC}/Game/Sequence.h"
	"${SRC}/Game/Temp.h"

	"${SRC}/Game/Graphics/DisplayObject.h"
	"${SRC}/Game/Graphics/Entity.h"
	"${SRC}/Game/Graphics/Layer.h"
	"${SRC}/Game/Graphics/ShowBlockField.h"
	"${SRC}/Game/Graphics/ShowClearTime.h"
	"${SRC}/Game/Graphics/ShowColumnMarker.h"
	"${SRC}/Game/Graphics/ShowEffect.h"
	"${SRC}/Game/Graphics/ShowGameOverFade.h"
	"${SRC}/Game/Graphics/ShowGameStatus.h"
	"${SRC}/Game/Graphics/ShowNewChallenger.h"
	"${SRC}/Game/Graphics/ShowObject.h"
	"${SRC}/Game/Graphics/ShowRowDel.h"
	"${SRC}/Game/Graphics/ShowStaff.h"
	"${SRC}/Game/Graphics/ShowText.h"
	"${SRC}/Game/Graphics/ShowVersusReadyGo.h"

	"${SRC}/Game/Play/Block.h"
	"${SRC}/Game/Play/Debug.h"
	"${SRC}/Game/Play/DelayTable.h"
	"${SRC}/Game/Play/Grade.h"
	"${SRC}/Game/Play/GravityTable.h"
	"${SRC}/Game/Play/Matrix.h"
	"${SRC}/Game/Play/Medal.h"
	"${SRC}/Game/Play/Player.h"
	"${SRC}/Game/Play/Ranking.h"
	"${SRC}/Game/Play/RankingCode.h"

	"${SRC}/Game/Play/Item/Item.h"
	"${SRC}/Game/Play/Item/ShowItemEffect.h"
	"${SRC}/Game/Play/Item/ShowItemWarningColorBlock.h"
	"${SRC}/Game/Play/Item/ShowItemWarningDarkBlock.h"
	"${SRC}/Game/Play/Item/ShowItemWarningDeathBlock.h"
	"${SRC}/Game/Play/Item/ShowItemWarningExchgField.h"
	"${SRC}/Game/Play/Item/ShowItemWarningHardBlock.h"
	"${SRC}/Game/Play/Item/ShowItemWarningMirrorBlock.h"
	"${SRC}/Game/Play/Item/ShowItemWarningNegaField.h"
	"${SRC}/Game/Play/Item/ShowItemWarningRollRoll.h"
	"${SRC}/Game/Play/Item/ShowItemWarningShotgun.h"
	"${SRC}/Game/Play/Item/ShowItemWarningTransform.h"
	"${SRC}/Game/Play/Item/ShowItemWarningXRay.h"
	"${SRC}/Game/Play/Item/ShowLaser.h"
	"${SRC}/Game/Play/Item/UpdateItemBottomDelField.h"
	"${SRC}/Game/Play/Item/UpdateItemColorBlock.h"
	"${SRC}/Game/Play/Item/UpdateItemDarkBlock.h"
	"${SRC}/Game/Play/Item/UpdateItemDeathBlock.h"
	"${SRC}/Game/Play/Item/UpdateItemDelEven.h"
	"${SRC}/Game/Play/Item/UpdateItemExchgField.h"
	"${SRC}/Game/Play/Item/UpdateItemFlipField.h"
	"${SRC}/Game/Play/Item/UpdateItemFreeFall.h"
	"${SRC}/Game/Play/Item/UpdateItemHardBlock.h"
	"${SRC}/Game/Play/Item/UpdateItemLaser.h"
	"${SRC}/Game/Play/Item/UpdateItemLeftMovField.h"
	"${SRC}/Game/Play/Item/UpdateItemMirrorBlock.h"
	"${SRC}/Game/Play/Item/UpdateItemNegaField.h"
	"${SRC}/Game/Play/Item/UpdateItemRightMovField.h"
	"${SRC}/Game/Play/Item/UpdateItemRollRoll.h"
	"${SRC}/Game/Play/Item/UpdateItemShotgun.h"
	"${SRC}/Game/Play/Item/UpdateItemTopDelField.h"
	"${SRC}/Game/Play/Item/UpdateItemTransform.h"
	"${SRC}/Game/Play/Item/UpdateItemXRay.h"

	"${SRC}/Input/Button.h"
	"${SRC}/Input/Coin.h"
	"${SRC}/Input/Credit.h"
	"${SRC}/Input/Input.h"
	"${SRC}/Input/InputTypes.h"

	"${SRC}/Lib/Fixed.h"
	"${SRC}/Lib/LibC.h"
	"${SRC}/Lib/Macros.h"
	"${SRC}/Lib/Math.h"

	"${SRC}/Main/AttractLoop.h"
	"${SRC}/Main/DemoReplayInput.h"
	"${SRC}/Main/Frame.h"
	"${SRC}/Main/GameLoop.h"
	"${SRC}/Main/InitVideo.h"
	"${SRC}/Main/MainLoop.h"
	"${SRC}/Main/TestLoop.h"

	"${SRC}/Sound/Music.h"
	"${SRC}/Sound/Sound.h"
	"${SRC}/Sound/SoundEffect.h"

	"${SRC}/Video/BgMap.h"
	"${SRC}/Video/InitScaleRam.h"
	"${SRC}/Video/GameBg.h"
	"${SRC}/Video/HwSprite.h"
	"${SRC}/Video/Object.h"
	"${SRC}/Video/Pal.h"
	"${SRC}/Video/PalNum.h"
	"${SRC}/Video/SpriteInit.h"
	"${SRC}/Video/UnknownSprite.h"
	"${SRC}/Video/UNK_600F1A8.h"
	"${SRC}/Video/Video.h"
	"${SRC}/Video/VideoDefs.h"

	"${SRC}/Platform/${PLATFORM_NAME}/PlatformSupport/Config.h"
	"${SRC}/Platform/${PLATFORM_NAME}/PlatformSupport/HwData.h"
	"${SRC}/Platform/${PLATFORM_NAME}/PlatformSupport/HwSound.h"
	"${SRC}/Platform/${PLATFORM_NAME}/PlatformSupport/PlatformTypes.h"
	"${SRC}/Platform/${PLATFORM_NAME}/PlatformSupport/PlatformUpdate.h"
)

add_subdirectory("${SRC}/Platform/${PLATFORM_NAME}")